--- a/wso2am/templates/repository/conf/api-manager.xml.erb
+++ b/wso2am/templates/repository/conf/api-manager.xml.erb
@@ -125,15 +125,16 @@
 		     An API deployed on a 'sandbox' type gateway will only support sandbox keys
 		     An API deployed on a 'hybrid' type gateway will support both production and sandbox keys. -->
 		<!-- api-console element specifies whether the environment should be listed in API Console or not -->
-                <Environment type="hybrid" api-console="true">
-                        <Name>Production and Sandbox</Name>
-                    <Description>This is a hybrid gateway that handles both production and sandbox token traffic.</Description>
+                 <%- @environments.each do |environment_name, environment| -%>
+                        <Environment type="hybrid" api-console="true">
+                          <Name>Production and Sandbox</Name>
+                          <Description>This is a hybrid gateway that handles both production and sandbox token traffic.</Description>
                         <!--
                                 Server URL of the API gateway.
                         -->
                         <%- if (@apply_publisher_specific_configurations or @apply_store_specific_configurations) and
-                        @apim_gateway and @apim_gateway['host'] and @apim_gateway['port']-%>
-                          <ServerURL>https://<%= @apim_gateway['host'] %>:<%= @apim_gateway['port'] %>/services/</ServerURL>
+                        environment['host'] and environment['port']-%>
+                          <ServerURL>https://<%= environment['host'] %>:<%= environment['port'] %>/services/</ServerURL>
                         <%- else -%>
                           <ServerURL>https://${carbon.local.ip}:${mgt.transport.https.port}${carbon.context}services/</ServerURL>
                         <%- end -%>
@@ -141,8 +142,8 @@
                             Admin username for the API gateway.
                         -->
                         <%- if (@apply_publisher_specific_configurations or @apply_store_specific_configurations) and
-                        @apim_gateway and @apim_gateway['username'] -%>
-                          <Username><%= @apim_gateway['username'] %></Username>
+                        environment['username'] -%>
+                          <Username><%= environment['username'] %></Username>
                         <%- else -%>
                           <Username>${admin.username}</Username>
                         <%- end -%>
@@ -150,8 +151,8 @@
                             Admin password for the API gateway.
                         -->
                         <%- if (@apply_publisher_specific_configurations or @apply_store_specific_configurations) and
-                        @apim_gateway and @apim_gateway['password'] -%>
-                          <Password><%= @apim_gateway['password'] %></Password>
+                        environment['password'] -%>
+                          <Password><%= environment['password'] %></Password>
                         <%- else -%>
                            <Password>${admin.password}</Password>
                         <%- end -%>
@@ -159,14 +160,15 @@
     			        <!--
                 			Endpoint URLs for the APIs hosted in this API gateway.
             		    -->
-            		    <%- if (@apply_publisher_specific_configurations or @apply_store_specific_configurations or
-            		    @single_node_deployment) and @apim_gateway and @apim_gateway['api_endpoint_host'] and
-            		        @apim_gateway['api_endpoint_port'] and  @apim_gateway['secure_api_endpoint_port']-%>
-                          <GatewayEndpoint>http://<%= @apim_gateway['api_endpoint_host'] %>:<%= @apim_gateway['api_endpoint_port'] %>,https://<%= @apim_gateway['api_endpoint_host'] %>:<%= @apim_gateway['secure_api_endpoint_port'] %></GatewayEndpoint>
+                      <%- @environments.each do |env_name, env| -%>
+                        <%- if (@apply_publisher_specific_configurations or @apply_store_specific_configurations) and env['api_endpoint_host'] and
+                          env['api_endpoint_port'] and  env['secure_api_endpoint_port']-%>
+                          <GatewayEndpoint>http://<%= env['api_endpoint_host'] %>:<%= env['api_endpoint_port'] %>,https://<%= env['api_endpoint_host'] %>:<%= env['secure_api_endpoint_port'] %></GatewayEndpoint>
                         <%- else -%>
                           <GatewayEndpoint>http://${carbon.local.ip}:${http.nio.port},https://${carbon.local.ip}:${https.nio.port}</GatewayEndpoint>
                         <%- end -%>
-                    </Environment>
+                      <%- end -%>
+                    <%- end -%>
         </Environments>
     </APIGateway>
 
@@ -387,8 +389,9 @@
              In distributed deployment we should configure this property in key manager node by pointing
              gateway https( /http, we recommend users to use 'https' endpoints for security purpose) url.
              Also please note that we should point gateway revoke service to key manager -->
-        <%- if @apply_store_specific_configurations and  @apim_gateway and @apim_gateway['api_endpoint_host'] and @apim_gateway['port']-%>
-            <RevokeAPIURL>https://<%= @apim_gateway['api_endpoint_host'] %>:<%= @apim_gateway['secure_api_token_revoke_endpoint_port'] %>/revoke</RevokeAPIURL>
+        <%- if @apply_store_specific_configurations and @environments and @environments['apim_gateway_lan']['api_endpoint_host'] and
+        @environments['apim_gateway_lan']['port']-%>
+            <RevokeAPIURL>https://<%= @environments['apim_gateway_lan']['api_endpoint_host'] %>:<%= @environments['apim_gateway_lan']['secure_api_token_revoke_endpoint_port'] %>/revoke</RevokeAPIURL>
         <%- else -%>
             <RevokeAPIURL>https://${carbon.local.ip}:${https.nio.port}/revoke</RevokeAPIURL>
         <%- end -%>
