--- a/wso2is_prepacked/templates/repository/conf/datasources/am-datasources.xml.erb
+++ b/wso2is_prepacked/templates/repository/conf/datasources/am-datasources.xml.erb
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~  Copyright (c) 2016, WSO2 Inc. (http://wso2.com) All Rights Reserved.
   ~
@@ -16,15 +15,15 @@
   ~  specific language governing permissions and limitations
   ~  under the License.
   -->
-<datasources-configuration xmlns:svns="http://org.wso2.securevault/configuration">
 
+<datasources-configuration xmlns:svns="http://org.wso2.securevault/configuration">
     <providers>
         <provider>org.wso2.carbon.ndatasource.rdbms.RDBMSDataSourceReader</provider>
     </providers>
 
     <datasources>
-        <%- @metrics_datasources.each do |datasource_name, datasource| -%>
-        <datasource>
+            <%- @am_datasources.each do |datasource_name, datasource| -%>
+            <datasource>
             <name><%= datasource['name'] %></name>
             <description><%= datasource['description'] %></description>
             <jndiConfig>
@@ -36,6 +35,7 @@
                     <username><%= datasource['username'] %></username>
                     <password><%= datasource['password'] %></password>
                     <driverClassName><%= datasource['driver_class_name'] %></driverClassName>
+                    <defaultAutoCommit><%= datasource['default_auto_commit'] %></defaultAutoCommit>
                     <maxActive><%= datasource['max_active'] %></maxActive>
                     <maxWait><%= datasource['max_wait'] %></maxWait>
                     <testOnBorrow><%= datasource['test_on_borrow'] %></testOnBorrow>
@@ -46,5 +46,4 @@
         </datasource>
         <%- end -%>
     </datasources>
-
 </datasources-configuration>
