--- a/wso2is_prepacked/templates/repository/conf/datasources/bps-datasources.xml.erb
+++ b/wso2is_prepacked/templates/repository/conf/datasources/bps-datasources.xml.erb
@@ -37,6 +37,7 @@
                     <username><%= datasource['username'] %></username>
                     <password><%= datasource['password'] %></password>
                     <driverClassName><%= datasource['driver_class_name'] %></driverClassName>
+                    <defaultAutoCommit><%= datasource['default_auto_commit'] %></defaultAutoCommit>
                     <maxActive><%= datasource['max_active'] %></maxActive>
                     <maxWait><%= datasource['max_wait'] %></maxWait>
                     <testOnBorrow><%= datasource['test_on_borrow'] %></testOnBorrow>
