--- a/wso2is_prepacked/templates/repository/conf/identity/identity.xml.erb
+++ b/wso2is_prepacked/templates/repository/conf/identity/identity.xml.erb
@@ -21,7 +21,7 @@
         <DataSource>
             <!-- Include a data source name (jndiConfigName) from the set of data
                 sources defined in master-datasources.xml -->
-            <Name><%= @master_datasources[@is_datasource]['jndi_config'] %></Name>
+            <Name><%= @am_datasources[@is_datasource]['jndi_config'] %></Name>
         </DataSource>
         <!-- If the identity database is created from another place and if it is
             required to skip schema initialization during the server start up, set the
