Add secure vault configs and some other changes in analytics module

--- a/wso2am_analytics/templates/repository/conf/tomcat/catalina-server.xml.erb
+++ b/wso2am_analytics/templates/repository/conf/tomcat/catalina-server.xml.erb
@@ -27,6 +27,9 @@
         -->
         <Connector protocol="org.apache.coyote.http11.Http11NioProtocol"
                    port="9763"
+<%- if @ports['proxyPort'] and @ports['proxyPort']['http'] -%>
+                   proxyPort="<%= @ports['proxyPort']['http'] %>"
+<%- end -%>
                    redirectPort="9443"
                    bindOnInit="false"
                    maxHttpHeaderSize="8192"
@@ -52,6 +55,9 @@
         -->
         <Connector protocol="org.apache.coyote.http11.Http11NioProtocol"
                    port="9443"
+<%- if @ports['proxyPort'] and @ports['proxyPort']['https'] -%>
+                   proxyPort="<%= @ports['proxyPort']['https'] %>"
+<%- end -%>
                    bindOnInit="false"
                    sslProtocol="TLS"
                    sslEnabledProtocols="TLSv1,TLSv1.1,TLSv1.2"
@@ -73,8 +79,8 @@
                    compressionMinSize="2048"
                    noCompressionUserAgents="gozilla, traviata"
                    compressableMimeType="text/html,text/javascript,application/x-javascript,application/javascript,application/xml,text/css,application/xslt+xml,text/xsl,image/gif,image/jpg,image/jpeg"
-                   keystoreFile="${carbon.home}/repository/resources/security/wso2carbon.jks"
-                   keystorePass="wso2carbon"
+				           keystoreFile="${carbon.home}/<%= @key_stores['connector_key_store']['location'] %>"
+				           keystorePass="<%= @key_stores['connector_key_store']['password'] %>"
                    URIEncoding="UTF-8"/>
 
 
