--- a/wso2am_runtime/templates/repository/conf/api-manager.xml.erb
+++ b/wso2am_runtime/templates/repository/conf/api-manager.xml.erb
@@ -407,9 +407,9 @@
              In distributed deployment we should configure this property in key manager node by pointing
              gateway https( /http, we recommend users to use 'https' endpoints for security purpose) url.
              Also please note that we should point gateway revoke service to key manager -->
-        <%- if @apply_store_specific_configurations and @environments and @environments['apim_gateway_lan']['api_endpoint_host'] and
-        @environments['apim_gateway_lan']['port']-%>
-        <RevokeAPIURL>https://<%= @environments['apim_gateway_lan']['api_endpoint_host'] %>:<%= @environments['apim_gateway_lan']['secure_api_token_revoke_endpoint_port'] %>/revoke</RevokeAPIURL>
+        <%- if @apply_store_specific_configurations and @environments and @environments['apim_gateway_env1']['api_endpoint_host'] and
+        @environments['apim_gateway_env1']['port']-%>
+        <RevokeAPIURL>https://<%= @environments['apim_gateway_env1']['api_endpoint_host'] %>:<%= @environments['apim_gateway_env1']['secure_api_token_revoke_endpoint_port'] %>/revoke</RevokeAPIURL>
         <%- else -%>
         <RevokeAPIURL>https://${carbon.local.ip}:${https.nio.port}/revoke</RevokeAPIURL>
         <%- end -%>
