Remove applying sec vault only for carbon datasource
Based on the code review and production use-cases sec vault will be
applied to all the master data-sources

--- a/wso2am_runtime/templates/repository/conf/datasources/master-datasources.xml.erb
+++ b/wso2am_runtime/templates/repository/conf/datasources/master-datasources.xml.erb
@@ -38,7 +38,7 @@
                     <url><%= datasource['url'] %></url>
                     <username><%= datasource['username'] %></username>
                     <!-- By default secure vault is applied to the WSO2_CABON_DB only -->
-                    <% if @enable_secure_vault && datasource['name'] == "WSO2_CARBON_DB" %>
+                    <% if @enable_secure_vault %>
                     <password svns:secretAlias="Datasources.<%= datasource['name'] %>.Configuration.Password">password</password>
                     <%- else -%>
                     <password><%= datasource['password'] %></password>
